--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -1,6 +1,66 @@
 ﻿@page "/"
+@using DomainModels
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+@* <div class="top-section">
+	<div class="card-top-section">
+		<div class="card-body">
+			<h1 class="header-top-section">Buy and Sell Used<br>Video Games</h1>
+			<p class="text-top-section">Discover a wide selection of pre-owned video games and consoles.<br>Start buying or selling today!</p>
+		</div>
+	</div>
+	<img src="" alt="Temporary picture." class="image-top-section" />
+	<div class="button-container-top-section">
+		<button> <a href="">Start</a></button>
+		<button> <a href="">Learn More</a></button>
+	</div>
+</div> *@
+<div class="top-section">
+	<div class="container text-center">
+		<div class="row">
+			<div class="col">
+				<h2>Buy and Sell Used Video Games</h2>
+				<p>Discover a wide selection of pre-owned video games and console. Start buying or selling today.</p>
+			</div>
+			<div class="col">
+				<img src="" alt="Temporary picture." class="image-top-section" />
+			</div>
+		</div>
+	</div>
+</div>
 
-Welcome to your new app.
+<div class="middle-section">
+	<h2 class="header-middle-section">Find Your Favorite Games at Great Prices</h2>
+	<p class="text-middle-section">
+		Our platform offers a wide selection af used video games, ensuring you can find your favorite<br>
+		titles at affordable prices. With secure payment options and user rating, you can buy with<br>confidence.</p>
+
+	<div class="card-container-middle-section">
+
+		<div class="card-middle-section">
+			<div class="card-body">
+				<img src="favicon.png" class="logo" />
+				<h3 class="card-title">Wide Game Selection</h3>
+				<p class="card-text">Browse through a vast collection of games.</p>
+			</div>
+		</div>
+		<div class="card-middle-section">
+			<div class="card-body">
+				<img src="favicon.png" class="logo" />
+				<h3 class="card-title">Secure Payment</h3>
+				<p class="card-text">Shop with peace of mind knowing your transactions are secure.</p>
+			</div>
+		</div>
+		<div class="card-middle-section">
+			<div class="card-body">
+				<img src="favicon.png" class="logo" />
+				<h3 class="card-title">User Ratings</h3>
+				<p class="card-text">Make informed purchasing decisions with ratings and reviews.</p>
+			</div>
+		</div>
+	</div>
+	<div class="button-container-middle-section">
+		<button class="button-middle-section"><a href="">Learn More</a></button>
+		<button class="button-middle-section"><a href="">Sign Up</a></button>
+	</div>
+</div>
