Updatet fav icon

--- a/BlazorApp/Components/Pages/Product.razor
+++ b/BlazorApp/Components/Pages/Product.razor
@@ -8,6 +8,9 @@
     <div class="row">
         <div class="col">
             <img src="/picture/skyrim.png" class="img-thumbnail" alt="...">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="20" fill="currentColor" class="bi bi-heart-fill heart-icon" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314" />
+            </svg>
         </div>
         <div class="col">
             <h1 class="gameTitle" >@gameToShow.gameName</h1>
