--- a/BlazorApp/Components/Pages/ProductList.razor
+++ b/BlazorApp/Components/Pages/ProductList.razor
@@ -11,12 +11,16 @@
     {
         <div class="row" style="margin-bottom: 0.2rem">
             <div class="col-1">
+
                 <img src="/Picture/skyrim.png" class="img-fluid game-image" alt="Game Image" />
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="20" fill="currentColor" class="bi bi-heart-fill heart-icon" viewBox="0 0 20 20">
+<path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314" />
+                </svg>
             </div>
             <div class="col-9">
                 <p class="game-title">@games.gameName</p>
-                <p class="game-created">Created: @games.created</p>
-                <p class="game-genre">Genre: @games.genre</p>
+                <p class="game-created"><b>Created:</b> @games.created</p>
+                <p class="game-genre"><b>Genre:</b> @games.genre</p>
                 <p class="game-description">@games.description</p>
             </div>
             <div class="col-2">
