--- a/BlazorApp/Components/Pages/Product.razor
+++ b/BlazorApp/Components/Pages/Product.razor
@@ -1,32 +1,41 @@
 ﻿@page "/product/{itemID}"
 @inject List<Item> allDummyData
 @inject List<User> allDummyUsers
-
+<PageTitle> @gameToShow.gameName</PageTitle>
 
 
 <div class="container text-center">
     <div class="row">
         <div class="col">
             <img src="/picture/skyrim.png" class="img-thumbnail" alt="...">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="20" fill="currentColor" class="bi bi-heart-fill heart-icon" viewBox="0 0 20 20">
-                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314" />
-            </svg>
+
         </div>
         <div class="col">
             <h1 class="gameTitle" >@gameToShow.gameName</h1>
-            <h5 class="genre">Genre: <b>@gameToShow.genre</b> </h5>
-            <h5 class="description">Description:</h5>
+            <h5 class="genre"><b>Genre: </b>@gameToShow.genre </h5>
+            <h5 class="description"><b>Description:</b></h5>
             <p class="description">@gameToShow.description</p>
         </div>
         <div class="col">
                 <h3 class="priceTag">Price: <b>@gameToShow.price € </b></h3>
                 <button type="button" class="btn btn-primary"<b>Contact seller</b></button>
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="20" fill="currentColor" class="bi bi-heart-fill heart-icon" viewBox="0 0 20 20">
+                    <!-- Større sorte hjerte (baggrund) -->
+                    <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314" fill="black" transform="scale(1.1)" />
+                    <!-- Rødt hjerte (forgrund) flyttet lidt mere til højre og ned -->
+                    <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314" fill="red" transform="scale(0.8) translate(3,3)" />
+                </svg>
         </div>
 
     </div>
     <div class="row">
-        <div class="col">
-            1 of 3
+        <div class="col details">
+            <div class="gameDetails">
+                <h5 class="details"><b>Details:</b></h5>
+                <p class="conditionDetails"><b>Condition: </b>@gameToShow.condition</p>
+                <p class="genreDetails"><b>Genre: </b>@gameToShow.genre</p>
+                <p class="manufactureDetails"><b>Manufacture: </b>@gameToShow.manufacture</p>
+            </div>
         </div>
         <div class="col">
             2 of 3
