--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
         <NavMenu />
     </div>
 
-    <main style="background-color: darkslategray;">
+    <main style="background-color:#212529;">
         <div class="top-row px-4">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
