--- a/BlazorApp/Components/Pages/ProductList.razor.css
+++ b/BlazorApp/Components/Pages/ProductList.razor.css
@@ -1,13 +1,13 @@
-﻿article#bodybackground {
-    background-color: gray !important;
-}
-
-.ProductListTop {
+﻿.ProductListTop {
+    color: white;
     display: flex;
     justify-content: space-between;
-    align-items: center; /* Sørger for, at elementerne er centreret vertikalt */
+    align-items: center;
 }
 
+.productsCount {
+    color: white;
+}
 
 .container {
     margin-left: auto;
@@ -18,12 +18,12 @@
     min-height: 100vh;
 }
 
-.container .row {
-    background-color: #b3b3b3;
-    box-shadow: 4px 3.5px;
-    margin-top: 0.7rem;
-    padding: 0;
-}
+    .container .row {
+        background-color: #b3b3b3;
+        box-shadow: 4px 3.5px;
+        margin-top: 0.7rem;
+        padding: 0;
+    }
 
 .col-1 {
     position: relative;
@@ -32,16 +32,23 @@
     margin: 0.3rem 0 0.3rem 0;
 }
 
-.heart-icon {
-    position: absolute;
-    text-align: left;
-    top: 0;
-    left:0;
-    width: 2rem;
-    height: 3rem;
-
+.col-1 button {
+    background-color: #b3b3b3; /* Matcher baggrundsfarven i .col-1 */
+    border: none; /* Fjerner eventuelle rammer */
+    padding: 0; /* Fjerner padding, hvis det er nødvendigt */
+    margin:0;
 }
 
+
+.favoriteStar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: drop-shadow(2px 2px 5px rgba(0,0,0,0.5));
+    width: 30px;
+    height: 30px;
+    transform: translate(0rem, 0rem);
+}
 
 .text-right {
     text-align: right;
@@ -58,12 +65,14 @@
     margin: 0.3rem 0 0 0;
     padding: 0;
 }
-.game-created{
+
+.game-created {
     font-size: 0.8rem;
-    margin:0;
+    margin: 0;
     color: black;
 }
-.game-manufacture{
+
+.game-manufacture {
     font-size: 0.8rem;
     margin: 0;
     color: black;
@@ -72,12 +81,9 @@
 .col-2 {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Justerer elementerne til venstre */
-    justify-content: center; /* Centrerer elementerne vertikalt */
+    align-items: flex-start;
+    justify-content: center;
 }
-
-
-
 
 .game-price {
     font-size: 1rem;
@@ -90,16 +96,8 @@
     margin: 0;
 }
 
-.game-visit {
-    background-color: dodgerblue;
-    position: relative;
-    text-align: center;
-    visibility: visible;
-    margin: 0.2rem 0 0 0;
-}
-
 .game-genre {
-    margin:0;
+    margin: 0;
     font-size: 0.8rem;
     color: black;
 }
@@ -108,32 +106,3 @@
     margin: 0.2rem 0 0.1rem 0;
     font-size: 0.9rem;
 }
-
-
-.basket {
-    color: white; /* Juster farven efter behov */
-    text-align: right;
-}
-
-.custom-basket-button {
-    background-color: transparent;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 4px;
-}
-
-.custom-basket-button:hover {
-    color: lightgray; /* Darker shade of Bootstrap's primary color */
-}
-
-
-
-
-
