cleaned up code and changed top to darkmode

--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
     </div>
 
     <main style="background-color:#212529;">
-        <div class="top-row px-4">
+        <div class="top-row px-4" style="background-color:#212529;">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
