--- a/BlazorApp/Components/Pages/Home.razor.css
+++ b/BlazorApp/Components/Pages/Home.razor.css
@@ -1,30 +1,39 @@
-﻿body {
-}
-
-.section {
+﻿.section {
     position: relative;
     height: 625px;
     align-items: center;
     border-bottom: 1px solid #ff0000;
+    padding: 2%;
 }
 
-.col {
-    border: 1px solid #ff0000;
-    padding: 20px;
+.colum {
+    flex: 1;
+    border-radius: 10px;
+}
+
+.left-colum{
+    padding: 2%;
+    background-color: #b3b3b3;
+}
+
+.right-colum {
+    padding: 2%;
 }
 
 .header-top-section {
-    margin-top: 45%;
+    margin-top: 40%;
 }
 
 .image {
     object-fit: cover;
     height: auto;
     width: 100%;
+    border-radius: 10px;
 }
 
 .text {
     text-align: center;
+    color: #b3b3b3;
 }
 
 .card-container {
@@ -34,12 +43,11 @@
 }
 
 .card-middle-section {
-    width: 33%;
+    width: 32.5%;
     padding: 2%;
-    border: 1px solid #ff0000;
-    border-radius: 10px;
     text-align: center;
-    background: #b3b3b3
+    background: #b3b3b3;
+    border-radius: 10px;
 }
 
 .button-container-middle-section {
@@ -48,18 +56,12 @@
     padding: 2%;
 }
 
-.button-middle-section {
-    margin-right: 1%;
-    margin-left: 1%;
-}
-
 .card-bottom-section {
-    width: 24%;
-    padding: 20px;
-    border: 1px solid #ff0000;
-    border-radius: 10px;
+    width: 30%;
+    padding: 2%;
     text-align: center;
-    background: #b3b3b3
+    background: #b3b3b3;
+    border-radius: 10px;
 }
 
 .card-body-bottom {
@@ -68,9 +70,13 @@
     position: relative;
 }
 
-.btn-dark {
-    transform: translateY(-20%);
+.card-body-bottom:hover {
+    opacity: 70%;
 }
+
+    .btn-dark {
+        border: 1px solid #b3b3b3;
+    }
 
 .btn-dark:hover {
     opacity: 70%;
